package patterns.decorator.withinheritance;

public class PizzaStore {
 
	public static void main(String args[]) {
		// maak pizza met dunne korst en kaas en olijven.
		Pizza pizza = new ThincrustPizza();
		// ????


		// toon beschrijving en de kosten voor deze pizza
/*
		System.out.println(?.getDescription()
				+ " $" + ?.cost());
*/

	}
}
